# piper-phonemize-fix

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: wheels.yml
piper_phonemize/: __init__.py
src/: phonemize.cpp  python.cpp  shared.cpp  shared.hpp
